--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">NetworkAS</string>
+    <string name="app_title">Network Ano N\'Ganza Jean-noel / Soulé Arémou Malick Aziz</string>
 </resources>
